Add View Example

--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -539,7 +539,13 @@
    "metadata": {},
    "source": [
     "#### q1a | Explain Plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Scan using idx_cities_city_name_range on tbl_cities (cost=0.00..5.22 rows=10 width=2170) (actual time=3.611..3.615 rows=2 loops=1)\n",
     "  Index Cond: ((city_name)::text = 'Alameda'::text)\n",
     "  Storage Table Read Requests: 1\n",
@@ -558,7 +564,7 @@
     "Storage Execution Time: 4.244 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
-    "\n",
+    "</details>\n",
     "The Explain Plan shows that this query uses the index and reads 2 rows\n",
     "- `Index Scan using idx_cities_city_name_range on public.tbl_cities (actual time=6.392..6.397 rows=2 loops=1)`\n",
     "\n",
@@ -659,7 +665,12 @@
    "metadata": {},
    "source": [
     "#### q1b | Explain plan (above ^^)\n",
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Only Scan using idx_cities_city_name_range on tbl_cities (cost=0.00..5.12 rows=10 width=548) (actual time=3.043..3.046 rows=2 loops=1)\n",
     "  Index Cond: (city_name = 'Alameda'::text)\n",
     "  Heap Fetches: 0\n",
@@ -677,6 +688,8 @@
     "Storage Execution Time: 3.820 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "The Explain Plan shows that this query uses the index only `Index Only Scan` and reads 2 rows.\n",
     "- `Index Only Scan using idx_cities_city_name_range on public.tbl_cities (actual time=4.964..4.968 rows=2 loops=1)`\n",
     "\n",
@@ -823,7 +836,12 @@
    "metadata": {},
    "source": [
     "#### q1c | Explain plan (above ^^)\n",
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Scan using idx_cities_city_name_range on tbl_cities (cost=0.00..5.25 rows=10 width=2170) (actual time=19.205..19.257 rows=16 loops=1)\n",
     "  Index Cond: (((city_name)::text >= 'Alameda'::text) AND ((city_name)::text <= 'Alamo'::text))\n",
     "  Storage Table Read Requests: 1\n",
@@ -842,6 +860,8 @@
     "Storage Execution Time: 18.856 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "The Explain Plan shows that this query uses the index only `Index Scan` and reads 16 rows.\n",
     "- `Index Scan using idx_cities_city_name_range on public.tbl_cities (actual time=3.192..3.239 rows=16 loops=1`\n",
     "\n",
@@ -929,7 +949,12 @@
    "metadata": {},
    "source": [
     "#### q1d | Explain Plan (above ^^)\n",
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Only Scan using idx_cities_city_name_range on tbl_cities (cost=0.00..5.15 rows=10 width=548) (actual time=1.777..1.777 rows=0 loops=1)\n",
     "  Index Cond: ((city_name >= 'alameda'::text) AND (city_name <= 'alamo'::text))\n",
     "  Heap Fetches: 0\n",
@@ -947,6 +972,8 @@
     "Storage Execution Time: 2.641 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "The Explain Plan shows that this query only uses the range index and in doing so, retrieves 16 rows.\n",
     "- `Index Only Scan using idx_cities_city_name_range on public.tbl_cities (actual time=0.883..0.891 rows=16 loops=1)`\n",
     "\n",
@@ -1172,7 +1199,13 @@
    "metadata": {},
    "source": [
     "#### q2a | Explain Plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Scan using idx_cities_city_name_hash on tbl_cities (cost=0.00..5.22 rows=10 width=2142) (actual time=2.517..2.522 rows=2 loops=1)\n",
     "  Index Cond: ((city_name)::text = 'Alameda'::text)\n",
     "  Storage Table Read Requests: 1\n",
@@ -1191,6 +1224,8 @@
     "Storage Execution Time: 3.487 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "The Explain Plan shows that this query uses the hash index and reads 2 rows.\n",
     "- `Index Scan using idx_cities_city_name_hash on public.tbl_cities (actual time=3.539..3.552 rows=2 loops=1`\n",
     "\n",
@@ -1285,7 +1320,13 @@
    "metadata": {},
    "source": [
     "#### q2b | Explain Plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Index Only Scan using idx_cities_city_name_hash on tbl_cities (cost=0.00..5.12 rows=10 width=548) (actual time=1.340..1.344 rows=2 loops=1)\n",
     "  Index Cond: (city_name = 'Alameda'::text)\n",
     "  Heap Fetches: 0\n",
@@ -1303,6 +1344,8 @@
     "Storage Execution Time: 2.077 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "The Explain Plan shows that the index is a covering index and returns 2 rows.\n",
     "- `Index Only Scan using idx_cities_city_name_hash on public.tbl_cities (actual time=0.805..0.808 rows=2 loops=1)`\n",
     "\n",
@@ -1392,7 +1435,13 @@
    "metadata": {},
    "source": [
     "#### q2c | Explain plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Seq Scan on tbl_cities (cost=0.00..105.00 rows=1000 width=2170) (actual time=57.441..543.533 rows=16 loops=1)\n",
     "  Filter: (((city_name)::text >= 'Alameda'::text) AND ((city_name)::text <= 'Alamo'::text))\n",
     "  Rows Removed by Filter: 148250\n",
@@ -1410,6 +1459,8 @@
     "Storage Execution Time: 361.987 ms\n",
     "Peak Memory Usage: 8 kB\n",
     "```\n",
+    "</details>\n",
+    "\n",
     "\n",
     "As expected, the optimizer generates an Explain Plan that does not use the hash index. Instead, the Explain Plan shows a full table scan of the table itself.\n",
     "- `Seq Scan on tbl_cities (cost=0.00..105.00 rows=1000 width=2170) (actual time=57.441..543.533 rows=16 loops=1)`\n",
@@ -1497,7 +1548,13 @@
    "metadata": {},
    "source": [
     "#### q2d | Explain plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Seq Scan on tbl_cities (cost=0.00..105.00 rows=1000 width=2170) (actual time=270.262..270.312 rows=16 loops=1)\n",
     "  Remote Filter: (((city_name)::text >= 'Alameda'::text) AND ((city_name)::text <= 'Alamo'::text))\n",
     "  Storage Table Read Requests: 1\n",
@@ -1515,6 +1572,7 @@
     "Peak Memory Usage: 8 kB\n",
     "```\n",
     "\n",
+    "</details>\n",
     "\n",
     "With the pushdown enabled, the filter of the rows occurs at the tablet level. This is the `Remote Filter`.\n",
     "  - `Remote Filter: (((city_name)::text >= 'Alameda'::text) AND ((city_name)::text <= 'Alamo'::text))`\n",
@@ -1651,7 +1709,13 @@
    "metadata": {},
    "source": [
     "#### q3a | Explain plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Limit (cost=0.00..5.30 rows=10 width=1068) (actual time=7.750..7.970 rows=100 loops=1)\n",
     "  -> Index Scan using idx_cities_city_name_exp on tbl_cities (cost=0.00..5.30 rows=10 width=1068) (actual time=7.748..7.960 rows=100 loops=1)\n",
     "        Index Cond: ((upper((COALESCE(city_name, city_name_alt))::text) >= 'A'::text) AND (upper((COALESCE(city_name, city_name_alt))::text) < 'B'::text))\n",
@@ -1672,6 +1736,8 @@
     "Storage Execution Time: 18.770 ms\n",
     "Peak Memory Usage: 24 kB\n",
     "```\n",
+    "\n",
+    "</details>\n",
     "\n",
     "A couple of observations about this query plan:\n",
     "- By using an index, there is no table sequence scan.\n",
@@ -1785,7 +1851,13 @@
    "metadata": {},
    "source": [
     "#### q4a | Explain plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Limit (cost=0.00..5.20 rows=10 width=1068) (actual time=2.682..2.733 rows=100 loops=1)\n",
     "  -> Index Only Scan using idx_cities_city_name_covering on tbl_cities (cost=0.00..5.20 rows=10 width=1068) (actual time=2.681..2.725 rows=100 loops=1)\n",
     "        Index Cond: (((upper((COALESCE(city_name, city_name_alt))::text)) >= 'A'::text) AND ((upper((COALESCE(city_name, city_name_alt))::text)) < 'B'::text))\n",
@@ -1805,6 +1877,8 @@
     "Storage Execution Time: 7.903 ms\n",
     "Peak Memory Usage: 24 kB\n",
     "```\n",
+    "\n",
+    "</details>\n",
     "\n",
     "A couple of observations about this query plan:\n",
     "- The index utilizes range sharding\n",
@@ -1932,7 +2006,13 @@
    "metadata": {},
    "source": [
     "#### q5 | Explain plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Limit (cost=0.00..4.98 rows=10 width=1068) (actual time=2.454..2.504 rows=100 loops=1)\n",
     "  -> Index Only Scan using idx_cities_city_name_covering_us on tbl_cities (cost=0.00..4.98 rows=10 width=1068) (actual time=2.453..2.496 rows=100 loops=1)\n",
     "        Index Cond: (((upper((COALESCE(city_name, city_name_alt))::text)) >= 'A'::text) AND ((upper((COALESCE(city_name, city_name_alt))::text)) < 'B'::text))\n",
@@ -1952,6 +2032,7 @@
     "Storage Execution Time: 14.660 ms\n",
     "Peak Memory Usage: 24 kB\n",
     "```\n",
+    "</details>\n",
     "\n",
     "A couple of observations about this query plan:\n",
     "- The index is for `idx_cities_city_name_covering_us` and utilizes range sharding\n",
