--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -1724,7 +1724,7 @@
    "source": [
     "---\n",
     "\n",
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/jeop_logo_large.webp\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041; text-align:center\"><img src=\"assets/jeop_logo_large.webp\" /></div>\n",
     "\n",
     "\n",
     "## q5 | Text Search for Jeopardy\n",
