--- a/06_Geo-partitioning.ipynb
+++ b/06_Geo-partitioning.ipynb
@@ -539,7 +539,13 @@
    "metadata": {},
    "source": [
     "#### q1b | Explain Plan (above ^^)\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Append (cost=0.00..870.00 rows=1000 width=144) (actual time=2.481..2.917 rows=4 loops=1)\n",
     "  -> Seq Scan on tbl_order_changes_prtn_2023_04 (cost=0.00..865.00 rows=1000 width=144) (actual time=2.481..2.916 rows=4 loops=1)\n",
     "        Remote Filter: ((change_date >= '2023-04-01'::date) AND (change_date <= '2023-04-20'::date))\n",
@@ -557,6 +563,7 @@
     "Storage Execution Time: 3.129 ms\n",
     "Peak Memory Usage: 24 kB\n",
     "```\n",
+    "</details>\n",
     "\n",
     "Some observations:\n",
     "-   `Seq Scan` is for the table partition, `tbl_order_changes_prtn_2023_04`\n",
@@ -682,7 +689,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Append (cost=0.00..12.90 rows=10 width=144) (actual time=9.757..10.300 rows=4 loops=1)\n",
     "  -> Index Scan using tbl_order_changes_prtn_2023_04_change_date_idx on tbl_order_changes_prtn_2023_04 (cost=0.00..12.85 rows=10 width=144) (actual time=9.756..10.298 rows=4 loops=1)\n",
     "        Index Cond: ((change_date >= '2023-04-01'::date) AND (change_date <= '2023-04-20'::date))\n",
@@ -701,7 +713,8 @@
     "Storage Flush Requests: 0\n",
     "Storage Execution Time: 27.665 ms\n",
     "Peak Memory Usage: 24 kB\n",
-    "```"
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1302,7 +1315,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Append (cost=0.00..101.50 rows=1000 width=76) (actual time=2.902..118.470 rows=65535 loops=1)\n",
     "  -> Seq Scan on tbl_transactions_prtn_us (cost=0.00..96.50 rows=1000 width=76) (actual time=2.901..113.355 rows=65535 loops=1)\n",
     "        Remote Filter: (geo_partition = 'US'::text)\n",
@@ -1319,7 +1337,8 @@
     "Storage Flush Requests: 0\n",
     "Storage Execution Time: 93.123 ms\n",
     "Peak Memory Usage: 24 kB\n",
-    "```"
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1513,7 +1532,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Limit (cost=0.00..1.01 rows=10 width=76) (actual time=1.595..1.934 rows=10 loops=1)\n",
     "  -> Append (cost=0.00..101.50 rows=1000 width=76) (actual time=1.594..1.931 rows=10 loops=1)\n",
     "        -> Seq Scan on tbl_transactions_prtn_us (cost=0.00..96.50 rows=1000 width=76) (actual time=1.594..1.929 rows=10 loops=1)\n",
@@ -1531,7 +1555,8 @@
     "Storage Flush Requests: 0\n",
     "Storage Execution Time: 2.346 ms\n",
     "Peak Memory Usage: 56 kB\n",
-    "```"
+    "```\n",
+    "</details>"
    ]
   },
   {
@@ -1692,7 +1717,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Limit (cost=0.00..1.09 rows=10 width=176) (actual time=2.508..2.755 rows=10 loops=1)\n",
     "  -> Append (cost=0.00..109.00 rows=1000 width=176) (actual time=2.507..2.753 rows=10 loops=1)\n",
     "        -> Seq Scan on tbl_transactions_prtn_eu (cost=0.00..104.00 rows=1000 width=176) (actual time=2.507..2.751 rows=10 loops=1)\n",
@@ -1709,8 +1739,8 @@
     "Storage Flush Requests: 0\n",
     "Storage Execution Time: 2.336 ms\n",
     "Peak Memory Usage: 72 kB\n",
-    "\n",
-    "```"
+    "```\n",
+    "</details>"
    ]
   },
   {
