--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -371,7 +371,13 @@
    "source": [
     "##### q1a | Explain Plan (above ^^)\n",
     "Because YugabyteDB reuses the PostgreSQL query layer, it is possible to view an Explain Plan for a query. YugabyteDB enhances the Explain Plain so that it shows how a query accesses distributed storage.\n",
-    "```\n",
+    "\n",
+    "<details>\n",
+    "      <summary>\n",
+    "      View Example Output\n",
+    "      </summary>\n",
+    "\n",
+    "```sql\n",
     "Seq Scan on public.tbl_no_pk (cost=0.00..102.50 rows=1000 width=68) (actual time=3.263..3.289 rows=1 loops=1)\n",
     "  Output: ''::text, k, v\n",
     "  Filter: (tbl_no_pk.k = 1000)\n",
@@ -390,6 +396,9 @@
     "Storage Execution Time: 3.832 ms\n",
     "Peak Memory Usage: 14 kB\n",
     "```\n",
+    "\n",
+    " </details>\n",
+    " \n",
     "This query performs a Sequence Scan to read 1000 rows - all the rows in the table - and then filters out 999 of them to find the 1 row in the predicate.\n",
     "\n",
     "The Seq Scan access makes 3 read requests. These are read requests into the tablets for this table. \n",
